--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,8 +4,15 @@ $srcInter:url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&displ
 $bodyAndMainWd: 1192px;
 $headerAndFooterWd: 1140px;
 
-$breakpoint1:1140px;
-$breakpoint2:1192px;
+$breakpoint1:1192px;
+$breakpoint2:1140px;
 $breakpoint3:1050px;
 $breakpoint4:900px;
-$breakpoint5:500px;
+$breakpoint5:685px;
+$breakpoint6:500px;
+
+$textColor:#E4E5EA;
+$buttonColor:#4077F3;
+$backColor:#1E1E1E;
+$headersColor:#656566;
+
