--- a/src/css/desktop.css/desktop-dist.css
+++ b/src/css/desktop.css/desktop-dist.css
@@ -8,23 +8,25 @@ body {
   src: url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
   font-weight: 500;
   font-size: 16px;
-  color: #E4E5EA;
-  font-family: Inter, Arial, Helvetica, sans-serif;
   background: no-repeat url("../../../assets/Desktop-original.svg");
+  color: white;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   background-clip: border-box;
-  background-color: #1E1E1E;
-  background-position: 50% 0%;
-  margin: 0 auto;
+  background-color: chartreuse;
+  background-position: 5% 0%;
 }
-body .wrapper {
+
+.wrapper {
   margin: 0 auto;
   max-width: 1192px;
 }
-body .header__container {
+
+.header__container {
   margin: 0;
   max-width: 1140px;
 }
-body .header {
+
+.header {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 13% 4% 44% 4% 35%;
@@ -38,19 +40,22 @@ body .header {
       -ms-flex-align: end;
           align-items: end;
 }
-body .header > *:nth-child(1) {
+
+.header > *:nth-child(1) {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
-body .header > *:nth-child(2) {
+
+.header > *:nth-child(2) {
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
-body .header > *:nth-child(3) {
+
+.header > *:nth-child(3) {
   -ms-grid-row: 1;
   -ms-grid-column: 5;
 }
-body .header__list {
+.header__list {
   list-style: none;
   display: -ms-grid;
   display: grid;
@@ -58,13 +63,13 @@ body .header__list {
   grid-template-columns: repeat(5, 1fr);
   padding-bottom: 5px;
 }
-body .header__list-item {
+.header__list-item {
   margin-right: 30px;
 }
-body .header__list-item:last-child {
+.header__list-item:last-child {
   margin: 0;
 }
-body .header__contacts {
+.header__contacts {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 145px 169px;
@@ -72,14 +77,15 @@ body .header__contacts {
   -ms-grid-column-align: end;
       justify-self: end;
 }
-body .header__contacts .social-network {
+.header__contacts .social-network {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
   justify-items: end;
 }
-body .header__logo-comment {
+
+.header__logo-comment {
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
   font-weight: 300;
@@ -88,56 +94,51 @@ body .header__logo-comment {
       -ms-grid-row-align: start;
       align-self: start;
 }
-body .main__container {
+
+.main__container {
   margin: 0;
   max-width: 1192px;
 }
-body .main {
+
+.main {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 40% 31%;
-  grid-template-columns: 40% 31%;
+  -ms-grid-columns: 31% 26%;
+  grid-template-columns: 31% 26%;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 94px;
-  margin-bottom: 173px;
-      grid-template-areas: "left right" ". button";
 }
-body .main__left-block {
+
+.main > *:nth-child(1) {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
-  grid-area: left;
 }
-body .main__right-block {
+
+.main > *:nth-child(2) {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
-  grid-area: right;
-  margin-top: 10px;
 }
-body .main__button {
+
+.main > *:nth-child(3) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}
+
+.main > *:nth-child(4) {
   -ms-grid-row: 2;
   -ms-grid-column: 2;
-  grid-area: button;
-  width: 262px;
-  height: 61px;
-  margin: 61px 10px 0px 0px;
-  -ms-grid-column-align: end;
-      justify-self: end;
-  background: #4077F3;
-  font-size: 16px;
-  color: #E4E5EA;
-  border: none;
 }
-body .main__left-header {
+.main__left-header {
   font-family: Inter, Arial, Helvetica, sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
   font-weight: 400;
   font-size: 48px;
 }
-body .main__left-header .colorText {
+.main__left-header .colorText {
   font-weight: 900;
   color: transparent;
   -webkit-background-clip: text;
@@ -145,14 +146,13 @@ body .main__left-header .colorText {
   background-image: -webkit-gradient(linear, left top, right top, from(#FCB045), to(#FF3F78));
   background-image: linear-gradient(to right, #FCB045, #FF3F78);
 }
-body .main__right-header {
+.main__right-header {
   font-family: Inter, Arial, Helvetica, sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
   font-weight: 700;
   font-size: 18px;
-  text-align: end;
 }
-body .main__right-header .colorText {
+.main__right-header .colorText {
   font-weight: 700;
   color: transparent;
   -webkit-background-clip: text;
@@ -160,15 +160,8 @@ body .main__right-header .colorText {
   background-image: -webkit-gradient(linear, left top, right top, from(#FCB045), to(#FF3F78));
   background-image: linear-gradient(to right, #FCB045, #FF3F78);
 }
-body .main__left-paragraph {
-  margin-top: 30px;
-  width: 68%;
-  font-size: 18px;
-}
-body .quatroBlock-mobile {
-  display: none;
-}
-body .quatroBlock {
+
+.quatroBlock {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 125px 36px 125px;
@@ -178,91 +171,19 @@ body .quatroBlock {
   -webkit-column-gap: 36px;
      -moz-column-gap: 36px;
           column-gap: 36px;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-  text-align: end;
-  margin-top: 40px;
 }
-body .quatroBlock__header {
+.quatroBlock__header {
   font-family: Inter, Arial, Helvetica, sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
   font-weight: 500;
   font-size: 18px;
 }
-body .quatroBlock__span {
+.quatroBlock__span {
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
   font-weight: 400;
   font-size: 16px;
 }
-body .footer-container {
-  margin: 124px 0 0 0;
-  max-width: 1140px;
-}
-body .footer {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 200px 107px 425px 107px 300px;
-  grid-template-columns: 200px 425px 300px;
-  grid-column-gap: 107px;
-  -ms-grid-rows: auto auto;
-  grid-template-rows: auto auto;
-      grid-template-areas: "block1 block2 block3" ". . commentBlock";
-}
-body .footer__header {
-  font-family: Montserrat, Arial, Helvetica, sans-serif;
-  src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
-  font-weight: 400;
-  font-size: 14px;
-  margin-bottom: 20px;
-  color: #656566;
-}
-body .footer__block1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: block1;
-}
-body .footer__block2 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: block2;
-}
-body .footer__block2 .footer__list {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-}
-body .footer__block3 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 5;
-  grid-area: block3;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (40px)[4];
-  grid-template-rows: repeat(4, 40px);
+.quatroBlock__item {
   text-align: end;
-}
-body .footer__block4 {
-  -ms-grid-row: 2;
-  -ms-grid-column: 5;
-  grid-area: commentBlock;
-  font-family: Montserrat, Arial, Helvetica, sans-serif;
-  src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
-  font-weight: 400;
-  font-size: 12px;
-  text-align: end;
-  margin-bottom: 20px;
-  margin-top: 33px;
-}
-body .footer__comment_underline {
-  text-decoration: underline;
-  line-height: 20px;
-}
-body .footer__list {
-  list-style: none;
-}
-body .footer__list-item {
-  padding-bottom: 10px;
 }
